...
        super.onCreate(savedInstanceState)

        val lineItems = mutableListOf<LineItem>()
        lineItems.add(
            LineItem(
                price = 6.95f,
                productName = "Flaming Tiger Pearl Milk",
                productId = "AFJQ3USFV4VICW43GYDYXJ5P",
                siteProductId = "6",
                productModifiers = mutableListOf<CartItemChoiceDetails>().apply {
                    add(CartItemChoiceDetails(
                        choiceName = "100% Ice (Normal)",
                        choiceId = "11ec613d076603c6b3d7d2f78cb7156a",
                        price = 0.0f
                        )
                    )
                },
...
