...
                lineHeight = 28.sp
            )
        }

        Text(
            modifier = Modifier
                .testTag("orderprocess"),
            text = "Your Order is Being Processed!",
            fontSize = 32.sp,
            lineHeight = 36.sp
        )
        val itemSubtotal = MutableList(appViewModel.shoppingCart.size){ 0.0f }
        val itemHeight = 120
...
