...
                android:id="@+id/editTextText4"
                android:layout_width="262dp"
                android:layout_height="92dp"
                android:ems="10"
                android:inputType="text"
                android:paddingTop="10dp"
                android:text="Signature" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
...
